Finished proof of main theorem for encoding.

--- a/commanddefs.tex
+++ b/commanddefs.tex
@@ -78,6 +78,8 @@
 \newcommand{\moddomain}{A_{\mathsf{dom}}}
 \newcommand{\modcommit}{A_{\mathsf{com}}}
 \newcommand{\modopening}{A_{\mathsf{op}}}
+\newcommand{\modlinear}[1]{A_{\mathsf{op,lin}}^{#1}}
+
 \newcommand{\hashajtai}{h_\mathrm{Ajtai}}
 \newcommand{\limbs}{\gamma}
 % Used inside inkscape svg. This uses lots of LaTeX commands because the svg get messy otherwise.
@@ -92,6 +94,7 @@
 
 \newcommand*{\sisadv}{\overline{\adv}}
 \newcommand*{\sisadvkots}{\overline{\adv}}
+\newcommand*{\hint}{\mathrm{hint}}
 
 \newcommand*{\latring}{\Lambda_\ring}
 \newcommand*{\latmodular}{\Lambda_{\ring,q}}
@@ -100,4 +103,6 @@
 
 \newcommand*{\latencode}{\ensuremath{\mathsf{Encode}_B}}
 \newcommand*{\latdecode}{\ensuremath{\mathsf{Decode}_B}}
+\newcommand*{\openencode}{\ensuremath{\mathsf{Encode}_{\mathrm{op}}}}
+\newcommand*{\opendecode}{\ensuremath{\mathsf{Decode}_{\mathrm{op}}}}
 \DeclareMathOperator*{\Span}{Span}
