Finished improved encodings.

--- a/commanddefs.tex
+++ b/commanddefs.tex
@@ -79,6 +79,7 @@
 \newcommand{\modcommit}{A_{\mathsf{com}}}
 \newcommand{\modopening}{A_{\mathsf{op}}}
 \newcommand{\modlinear}[1]{A_{\mathsf{op,lin}}^{#1}}
+\newcommand{\modencoded}[1]{A_{\mathsf{op}}^{#1}}
 
 \newcommand{\hashajtai}{h_\mathrm{Ajtai}}
 \newcommand{\limbs}{\gamma}
@@ -95,6 +96,8 @@
 \newcommand*{\sisadv}{\overline{\adv}}
 \newcommand*{\sisadvkots}{\overline{\adv}}
 \newcommand*{\hint}{\mathrm{hint}}
+
+\newcommand*{\hvcencoded}{\hvc^{\textrm{Encoded}}}
 
 \newcommand*{\latring}{\Lambda_\ring}
 \newcommand*{\latmodular}{\Lambda_{\ring,q}}
